# promcord

./: .bazelrc  BUILD.bazel  Gopkg.toml  Makefile  README.md  WORKSPACE
cmd/promcord/: BUILD.bazel  service.go
k8s/: deploy.yaml  secret.yaml
pkg/api/middlewares/: BUILD.bazel  logging.go
pkg/promcord/: BUILD.bazel  metric.go  server.go
pkg/promcord/handlers/: BUILD.bazel  base.go  memberCountChanged.go  messageCreated.go
pkg/promcord/metrics/: BUILD.bazel  base.go  memberCount.go  msg.go  msgCount.go  msgLength.go  msgWordCount.go
pkg/service/: BUILD.bazel  init.go
pkg/version/: BUILD.bazel  version.go
