load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_bundle", "container_push", "container_load")
load("@io_bazel_rules_docker//docker:docker.bzl", "docker_bundle")
load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "go_default_library",
    srcs = ["service.go"],
    importpath = "github.com/playnet-public/promcord/cmd/promcord",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/service:go_default_library",
        "//vendor/github.com/bwmarrin/discordgo:go_default_library",
        "//vendor/github.com/go-chi/chi:go_default_library",
        "//vendor/github.com/seibert-media/golibs/log:go_default_library",
        "//vendor/go.opencensus.io/exporter/prometheus:go_default_library",
        "//vendor/go.opencensus.io/stats:go_default_library",
        "//vendor/go.opencensus.io/stats/view:go_default_library",
        "//vendor/go.opencensus.io/tag:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
    ],
)

go_binary(
    name = "bin",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    binary = ":bin",
)

load("@k8s_deploy//:defaults.bzl", "k8s_deploy")
load(
    "//:helpers/k8s.bzl",
    manifest = "template_manifest",
)

manifest(
    name = "manifest",
)

k8s_deploy(
    name = "dev",
    images = {
        "": ":image",
    },
    template = ":manifest",
)
