load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "base.go",
        "memberCountChanged.go",
        "messageCreated.go",
    ],
    importpath = "github.com/playnet-public/promcord/pkg/promcord/handlers",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/promcord:go_default_library",
        "//pkg/promcord/metrics:go_default_library",
        "//vendor/github.com/bwmarrin/discordgo:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/seibert-media/golibs/log:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
    ],
)
